# auralmatics

./: .dockerignore  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  README.md  fly.toml  pyproject.toml  tox.ini
.github/workflows/: build.yaml  release.yaml
.streamlit/: config.toml
src/auralmatics/: __init__.py  __main__.py  app.py  util.py
src/auralmatics/pages/: compression.py  modulation.py
tests/: __init__.py  conftest.py  test_app.py  test_util.py  util.py
